kubernetes/client-deployment.yaml
# Version de l'API Kubernetes
apiVersion: apps/v1

# Sélectionner le type de ressource qu'on déploie
kind: Deployment

# Définit des informations sur la ressource (nom, labels, ...)
metadata:
  name: client-srv
spec:
  # Nombre de Pods lancés
  replicas: 3

  # Cibler les Pods à lancer
  selector:
    matchLabels:
      app: client-service

  # Modèle de Pod utilisé pour créer les Pods
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
      - name: client-service  # Nom du conteneur à l'intérieur du Pod
        image: client
        imagePullPolicy: Never  # Indique à Kubernetes de ne pas récupérer l'image
        ports:
        - containerPort: 3000  # port ou le container ecoute (nginx)
