kubernetes/comments-deployment.yaml
# Version de l'API Kubernete
apiVersion: apps/v1

# Sélectionner le type de ressource qu'on déploie
kind: Deployment

# Définit des informations sur la ressource (nom, labels, ...)
metadata:
# Nom du Deployment, utilisé pour identifier cette ressource dans le cluster
  name: comments-srv

spec:
 # Nombre de Pods lancés
  replicas: 3

  # Cibler les Pods à lancer
  selector:
    matchLabels:
      app: comments-service

 # Modèle de Pod utilisé pour créer les Pods     
  template:
    metadata:
      labels:
        app: comments-service
    spec:
      containers:
      - name: comments-service    #Nom du conteneur à l'intérieur du Pod
        image: myapp
        ports:
        - containerPort: 4001
