kubernetes/event-bus-deployment.yaml
# Version de l'API Kubernete
apiVersion: apps/v1

# Sélectionner le type de ressource qu'on déploie
kind: Deployment

# Définit des informations sur la ressource (nom, labels, ...)
metadata:
# Nom du Deployment, utilisé pour identifier cette ressource dans le cluster
  name: event-bus-srv
spec:
 # Nombre de Pods lancés
  replicas: 3

  # Cibler les Pods à lancer
  selector:
    matchLabels:
      app: event-bus-service

 # Modèle de Pod utilisé pour créer les Pods     
  template:
    metadata:
      labels:
        app: event-bus-service
    spec:
      containers:
      - name: event-bus-service    #Nom du conteneur à l'intérieur du Pod
        image: event_bus
        imagePullPolicy: Never  # Indique à Kubernetes de ne pas récupérer l'image
        ports:
        - containerPort: 4005
