kubernetes/client-deployment-service.yaml
# Définition du Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-srv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client-service
  template:
    metadata:
      labels:
        app: client-service
    spec:
      containers:
      - name: client-service
        image: client
        imagePullPolicy: Never
        ports:
        - containerPort: 3000  # Port sur lequel le conteneur écoute

---
# Définition du Service
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client-service
  ports:
    - protocol: TCP
      port: 3000       # Port sur lequel le service sera accessible
      targetPort: 3000  # Port sur lequel le conteneur écoute
  type: ClusterIP
