kubernetes/client-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: client-srv
spec:
  selector:
    app: client-service

  ports:
    - protocol: TCP
      port: 3000       #Le port sur lequel le service sera accessible 
      targetPort: 80   #Le port sur lequel votre conteneur écoute 
  type: ClusterIP
