kubernetes/comments-deployment-service.yaml
# Définition du Deployment

# Version de l'API Kubernete
apiVersion: apps/v1

# Sélectionner le type de ressource qu'on déploie
kind: Deployment

# Définit des informations sur la ressource (nom, labels, ...)
metadata:
# Nom du Deployment, utilisé pour identifier cette ressource dans le cluster
  name: comments-srv

spec:
  # Nombre de Pods lancés
  replicas: 3

  # Cibler les Pods à lancer
  selector:
    matchLabels:
      app: comments-service

  # Modèle de Pod utilisé pour créer les Pods     
  template:
    metadata:
      labels:
        app: comments-service
    spec:
      containers:
      - name: comments-service    #Nom du conteneur à l'intérieur du Pod
        image: comments
        imagePullPolicy: Never  # Indique à Kubernetes de ne pas récupérer l'image
        ports:
        - containerPort: 4001
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"

---
# Définition du Service

apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments-service
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
