kubernetes/event-bus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus-service
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
  type: ClusterIP
