kubernetes/moderation-deployment-service.yaml

#Deployment

# Version de l'API Kubernete
apiVersion: apps/v1

# Sélectionner le type de ressource qu'on déploie
kind: Deployment

# Définit des informations sur la ressource (nom, labels, ...)
metadata:
# Nom du Deployment, utilisé pour identifier cette ressource dans le cluster
  name: moderation-srv

spec:
 # Nombre de Pods lancés
  replicas: 3

  # Cibler les Pods à lancer
  selector:
    matchLabels:
      app: moderation-service

 # Modèle de Pod utilisé pour créer les Pods     
  template:
    metadata:
      labels:
        app: moderation-service
    spec:
      containers:
      - name: moderation-service    #Nom du conteneur à l'intérieur du Pod
        image: moderation
        imagePullPolicy: Never  # Indique à Kubernetes de ne pas récupérer l'image
        ports:
        - containerPort: 4003








---



#Service


apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation-service
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
  type: ClusterIP
