kubernetes/posts-deployment-service.yaml
# Deployment 


# Version de l'API Kubernete
apiVersion: apps/v1

# Sélectionner le type de ressource qu'on déploie
kind: Deployment

# Définit des informations sur la ressource (nom, labels, ...)
metadata:
# Nom du Deployment, utilisé pour identifier cette ressource dans le cluster
  name: posts-clusterip-srv

spec:
  # Nombre de Pods lancés
  replicas: 3

  # Cibler les Pods à lancer
  selector:
    matchLabels:
      app: posts-clusterip-service

  # Modèle de Pod utilisé pour créer les Pods     
  template:
    metadata:
      labels:
        app: posts-clusterip-service
    spec:
      containers:
      - name: posts-clusterip-service    #Nom du conteneur à l'intérieur du Pod
        image: posts
        imagePullPolicy: Never  # Indique à Kubernetes de ne pas récupérer l'image
        ports:
        - containerPort: 4000
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"



---


#Service 


apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv

spec:
  selector:
    app: posts-clusterip-service
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
