kubernetes/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv

spec:
  selector:
    app: posts-clusterip-service
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
