kubernetes/query-deployment-service.yaml
# Deployment 


# Version de l'API Kubernete
apiVersion: apps/v1

# Sélectionner le type de ressource qu'on déploie
kind: Deployment

# Définit des informations sur la ressource (nom, labels, ...)
metadata:
# Nom du Deployment, utilisé pour identifier cette ressource dans le cluster
  name: query-srv

spec:
  # Nombre de Pods lancés
  replicas: 1

  # Cibler les Pods à lancer
  selector:
    matchLabels:
      app: query-service

  # Modèle de Pod utilisé pour créer les Pods     
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
      - name: query-service    #Nom du conteneur à l'intérieur du Pod
        image: query
        imagePullPolicy: Never  # Indique à Kubernetes de ne pas récupérer l'image
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
        ports:
        - containerPort: 4002




---


#Service 

apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
