kubernetes/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
