kubernetes/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-bus-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /event
        pathType: Prefix
        backend:
          service:
            name:  event-bus-srv
            port:
              number: 4005
