kubernetes/comments-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comments-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /posts/?(.*)/comments
        pathType: Prefix
        backend:
          service:
            name: comments-srv
            port:
              number: 4001
