kubernetes/moderation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moderation-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: yourdomain.com
    http:
      paths:
      - path: /moderation   
        pathType: Prefix
        backend:
          service:
            name: moderation-srv
            port:
              number: 4003
